--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -6,5 +6,5 @@
     height: 100%;
     padding: 24px 24px;
     animation: myfirst 3s linear;
-    margin-bottom: -60px;
+    margin-bottom: 100px;
 }
