--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -10,7 +10,7 @@
     background-position: bottom;
     background-repeat: repeat-x;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow-x: hidden;
 }
 
@@ -20,6 +20,7 @@
     align-items: center;
     max-width: 54ch;
     padding: 16px 16px 128px;
+    height: fit-content;
 }
 
 h1{
@@ -92,4 +93,31 @@ h1{
     display: block;
     padding-top: 48%;
     width: 100%;
+}
+
+@media(max-width:720px){
+    .background{
+        width:100%;
+    }
+
+    .front{
+        width:100%;
+        bottom:0;
+    }
+
+    .home{
+        align-items: unset;
+    }
+
+    .text{
+        padding: 20px;
+    }
+
+    h1{
+        font-size: 35px;
+    }
+
+    .homeText{
+        font-size: 20px;
+    }
 }
