--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -6,6 +6,7 @@
     height: 100%;
     padding: 24px 24px;
     animation: myfirst 3s linear;
+    margin-bottom: 850px;
 }
 
 @media (min-width:1300px){
